# throw-trace

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/throw-trace/: CHANGELOG.md  Cargo.toml
crates/throw-trace-core/: CHANGELOG.md  Cargo.toml
crates/throw-trace-core/src/: call_graph.rs  diagnostic.rs  lib.rs  propagation.rs  types.rs
crates/throw-trace-ts/: CHANGELOG.md  Cargo.toml
crates/throw-trace-ts/src/: extract.rs  jsdoc.rs  lib.rs  parser.rs  throw_analyzer.rs  try_catch.rs  tsserver.rs
crates/throw-trace/src/: analyzer.rs  cache.rs  fixer.rs  loader.rs  main.rs  reporter.rs
crates/throw-trace/tests/: cache_test.rs  catalog_test.rs  integration_test.rs
docs/superpowers/plans/: 2026-05-10-throw-trace.md  2026-06-03-persistent-cache.md
docs/superpowers/specs/: 2026-05-10-throw-trace-design.md  2026-06-03-persistent-cache-design.md
npm/: .gitignore  README.md  package.json
npm/lib/: index.js
tests/catalog/: 01_direct_throw.ts  02_propagation.ts  03_try_catch_basic.ts  04_instanceof_catch.ts  05_member_call.ts  06_duplicate_call.ts  07_arrow_and_expression.ts  08_class_method.ts  09_nested_try_catch.ts  10_throw_expressions.ts  11_async_await.ts  12_catch_instanceof_multiple_types.ts  13_jsdoc_format.ts  14_mixed_caught_uncaught.ts  15_export_functions.ts  16_deep_propagation.ts  17_finally_block.ts  18_constructor_throw.ts  19_static_method.ts  20_promise_catch.ts  21_promise_then.ts  22_promise_then_catch_chain.ts  23_promise_combinators.ts  24_promise_finally.ts  25_async_no_await.ts  26_promise_constructor.ts  27_callback_throw.ts  28_generator.ts  29_getter_setter.ts  30_throw_non_error.ts  31_switch_case.ts  32_iife_and_nested.ts  33_assertion_function.ts  34_higher_order.ts  35_recursive.ts  36_rethrow_wrap.ts  37_control_flow.ts  38_dynamic_call.ts  39_overload.ts  40_default_param.ts  (+4 more)
tests/fixtures/: catch_all_suppression.ts  duplicate_call_partial_catch.ts  errors.ts  inheritance.ts  instanceof_catch_with_rethrow.ts  instanceof_conditional_rethrow_with_return.ts  instanceof_fallthrough_rethrow.ts  instanceof_partial_termination.ts  instanceof_rethrow_in_branch.ts  instanceof_unreachable_rethrow.ts  member_call_propagation.ts  propagation.ts  property_access.ts  result_error.ts  same_name_member_call.ts  simple_throw.ts  static_factory.ts  try_catch.ts  type_alias.ts  type_alias_declared.ts
tests/fixtures/cross_file/: a.ts  b.ts
tests/fixtures/cross_file_circular/: a.ts  b.ts
tests/fixtures/cross_file_rethrow/: factory.ts  setup.ts
tests/fixtures/lsp_violation/: abstract_class.ts  interface.ts  valid.ts
