[workspace]
resolver = "2"
members = [
    "crates/throw-trace-core",
    "crates/throw-trace-ts",
    "crates/throw-trace",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
rust-version = "1.85"
authors = ["KoheiKido <kido@9wick.com>"]
repository = "https://github.com/9wick/throw-trace"
homepage = "https://github.com/9wick/throw-trace"

[workspace.dependencies]
# Internal crates
throw-trace-core = { version = "0.1.2", path = "crates/throw-trace-core" }
throw-trace-ts = { version = "0.1.2", path = "crates/throw-trace-ts" }

# Parser
oxc_parser = "=0.73.0"
oxc_ast = "=0.73.0"
oxc_ast_visit = "=0.73.0"
oxc_allocator = "=0.73.0"
oxc_span = "=0.73.0"
oxc_syntax = "=0.73.0"

# Call graph
petgraph = "=0.6.5"

# CLI
clap = { version = "=4.5.21", features = ["derive"] }

# Serialization
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.133"

# Error handling
thiserror = "=2.0.6"
anyhow = "=1.0.94"

# File walking
ignore = "=0.4.23"
globset = "=0.4.15"

# Utility
compact_str = { version = "=0.8.1", features = ["serde"] }
smallvec = { version = "=1.13.2", features = ["serde", "union"] }

# Dev
assert_cmd = "=2.0.16"
predicates = "=3.1.3"
tempfile = "=3.14.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
