[package]
name = "throw-trace"
description = "Static analysis tool for @throws TSDoc declarations."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["lint", "throws", "tsdoc", "cli", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "throw-trace"
path = "src/main.rs"

[dependencies]
throw-trace-core.workspace = true
throw-trace-ts.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
globset.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
